[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solbrigm-test-client"
requires-python = ">=3.8"
license = "Apache-2.0"
dynamic = ["version"]
readme = "README.md"

[project.optional-dependencies]
dev = [
  "pytest>=6.2.5"
]


[tool.hatch.version]
path = "tecton_client/__about__.py"

[project.urls]
"Source" = "https://github.com/solbrigm/coursera"
